Add user status, roles, avatar and url, and change some layout

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,12 @@
 nav ul li:hover, nav ul li.active {
   background-color: rgba(0, 0, 0, 0.0);
 }
+
+.navbar-image {
+  margin-top: 10px;
+}
+
+.push-right {
+  margin-top: 37px;
+  float: right;
+}
