--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,29 +6,44 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-  <div class="navbar-fixed">
+  <body>
+
+    <!-- Floating button-->
+    <div class="container">
+      <a class="btn-floating btn-large waves-effect waves-light grey darken-3 push-right"><i class="mdi-content-add"></i></a>
+      <%= yield %>
+    </div>
+
     <nav>
       <div class="nav-wrapper">
-        <div class="col s12">
-          <div class="container">
-            <a href="#!" class="brand-logo">API Hunt</a>
-            <ul class="side-nav">
-              <% if current_user %>
-                <li><%= link_to current_user.name, "/signout" %></li>
-              <% else %>
-                <li><%= link_to "Sign in with Github", "/auth/github" %></li>
-              <% end %>
-              <!-- <li><a href="#"><i class="small mdi-navigation-more-vert"></i></a></li> -->
-              <li><a class="btn-floating btn-large waves-effect waves-light grey darken-3"><i class="mdi-content-add"></i></a></li>
-            </ul>
-          </div>
+        <div class="container">
+          <a href="#" class="brand-logo">API Hunt</a>
+          <ul id="nav-mobile" class="right side-nav">
+            <% if current_user %>
+            <div class="col s1">
+              <!-- <li><center><%#= image_tag(current_user.github_avatar, class: "navbar-image responsive-img circle", size: '40') %></center></li> -->
+              <li>
+                <center>
+                  <%= image_tag(current_user.github_avatar, class: "navbar-image responsive-img circle", size: '40') %>
+                </center>
+              </li>
+              <li><a class="waves-effect waves-light" href="/signout"><i class="mdi-action-settings-power"></i></a></li>
+            </div>
+            <% else %>
+              <li><%= link_to "Sign in with Github", "/auth/github" %></li>
+            <% end %>
+          </ul>
+
+          <!-- Include this line below -->
+          <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
+          <!-- End -->
         </div>
+
       </div>
     </nav>
-  </div>
 
-<%= yield %>
-
-</body>
+    <script type="text/javascript">
+      $(".button-collapse").sideNav();
+    </script>
+  </body>
 </html>
