get modal ready to for new api form

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,6 +7,7 @@ nav ul li:hover, nav ul li.active {
 }
 
 .push-right {
-  margin-top: 37px;
+  margin-top: -20px;
   float: right;
+  position: absolute;
 }
