--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -38,3 +38,11 @@ body {
 .plus-position{
   margin-top: -40px;
 }
+
+.card-name{
+  display: inline-block;
+}
+
+.card-image {
+  display: inline-block;
+}
