--- a/app/views/apis/index.html.erb
+++ b/app/views/apis/index.html.erb
@@ -8,7 +8,38 @@
 <% end %>
 
 <script type="text/javascript">
-  $(document).ready(function(){
-    $('.modal-trigger').leanModal();
-  });
+$(document).ready(function(){
+  $('.modal-trigger').leanModal();
+});
 </script>
+
+<div class="container">
+  <div class="row">
+    <% @apis.each do |api| %>
+      <div class="col m4">
+        <div class="card">
+          <div class="card-image waves-effect waves-block waves-light">
+            <!-- <img class="activator" src="https://developer.atlassian.com/stash/docs/latest/images/home/section-rest.png"> -->
+            <img class="activator" src="http://lorempixel.com/400/400/technics/<%= rand(1..10) %>/">
+          </div>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4"><%= api.api_name %> <i class="mdi-navigation-more-vert right"></i></span>
+            <p><a href="<%= api.api_doc_url %>">Documentation</a></p>
+          </div>
+          <div class="card-reveal">
+            <div class="col s3">
+              <img src="<%= api.user.github_avatar %>" class="card-image responsive-img circle" >
+            </div>
+            <div class="col s9">
+              <a href="#"><%= api.user.name %></a>
+              <span>Software Engineer</span>
+            </div>
+            <hr>
+            <span class="card-title grey-text text-darken-4"><%= api.api_name %> <i class="mdi-navigation-close right"></i></span>
+            <p><%= api.api_tagline %></p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
